--- a/profile.html
+++ b/profile.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html lang="en"> 
     <head> 
         <meta charset="UTF-8"> 
@@ -8,12 +8,26 @@
         <link rel="stylesheet" href="styles.css">
     </head> 
     <body> 
-        <h1>My profile</h1> 
-        <ul>
-            <li>aaaa</li>
-            <li>bbbb</li>
-
-        </ul>
+        <h1>Welkom op mijn profiel</h1>
+        <main>
+            <article>
+                <ul>
+                    <li><a href="index.html">Homepagina</a></li>
+                    <li><a href="profile.html">Profiel</a></li>
+                    <li><a href="contact.asp">Contact</a></li>
+                    <li><a href="about.asp">About</a></li>
+                </ul>
+            
+            </article>
+            <article>
+                <h2>Hobbys</h2>
+                <ul>
+                    <li>Voetbal/Basketbal</li>
+                    <li>Online schaken</li>
+                    <li>Youtube kijken (Voetbal/F1)</li>
+                </ul>
+            </article>
+        </main>         
     </body> 
     </html>
 
