--- a/profile.html
+++ b/profile.html
@@ -1,34 +1,35 @@
-    <!DOCTYPE html>
-<html lang="en"> 
-    <head> 
-        <meta charset="UTF-8"> 
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-        <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
-        <title>My profile</title> 
-        <link rel="stylesheet" href="styles.css">
-    </head> 
-    <body> 
-        <h1>Welkom op mijn profiel</h1>
-        <main>
-            <article>
-                <ul>
-                    <li><a href="index.html">Homepagina</a></li>
-                    <li><a href="profile.html">Profiel</a></li>
-                    <li><a href="contact.asp">Contact</a></li>
-                    <li><a href="about.asp">About</a></li>
-                </ul>
-            
-            </article>
-            <article>
-                <h2>Hobbys</h2>
-                <ul>
-                    <li>Voetbal/Basketbal</li>
-                    <li>Online schaken</li>
-                    <li>Youtube kijken (Voetbal/F1)</li>
-                </ul>
-            </article>
-        </main>         
-    </body> 
-    </html>
+<!DOCTYPE html>
+<html lang="en">
 
-    
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>My profile</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+    <h1>Welkom op mijn profiel</h1>
+    <main>
+        <article>
+            <ul>
+                <li><a href="index.html">Homepagina</a></li>
+                <li><a href="profile.html">Profiel</a></li>
+                <li><a href="CCCC">CCCCC</a></li>
+                <li><a href="DDDD">DDDDD</a></li>
+            </ul>
+
+        </article>
+        <article>
+            <h2>Hobbys</h2>
+            <ul>
+                <li>Voetbal/Basketbal</li>
+                <li>Online schaken</li>
+                <li>Youtube kijken (Voetbal/F1)</li>
+            </ul>
+        </article>
+    </main>
+</body>
+
+</html>
