--- a/profile.html
+++ b/profile.html
@@ -14,20 +14,17 @@
     <main>
         <article>
             <ul>
-                <li><a href="index.html">Homepagina</a></li>
-                <li><a href="profile.html">Profiel</a></li>
-                <li><a href="CCCC">CCCCC</a></li>
-                <li><a href="DDDD">DDDDD</a></li>
+                <li><a href="index.html"><strong>Startpagina</strong></a></li>
+            <li><a href="profile.html"><strong>Profiel</strong></a></li>
+            <li><a href="CCCC"><strong>CCCC</strong></a></li>
+            <li><a href="DDDD"><strong>DDDD</strong></a></li>
+
             </ul>
 
         </article>
         <article>
-            <h2>Hobbys</h2>
-            <ul>
-                <li>Voetbal/Basketbal</li>
-                <li>Online schaken</li>
-                <li>Youtube kijken (Voetbal/F1)</li>
-            </ul>
+            
+            
         </article>
     </main>
 </body>
