border color nav

--- a/index.html
+++ b/index.html
@@ -11,21 +11,22 @@
 
 <body>
     <h1>Startpagina</h1>
-    <article>
+    <nav>
         <ul>
-            <li><a href="index.html"><strong>Startpagina</strong></a></li>
-            <li><a href="profile.html"><strong>Profiel</strong></a></li>
-            <li><a href="CCCC"><strong>CCCC</strong></a></li>
-            <li><a href="DDDD"><strong>DDDD</strong></a></li>
+            <li style="border-right: 1px solid brown"><a href="index.html"><strong>Startpagina</strong></a></li>
+            <li style="border: 1px solid brown"><a href="profile.html"><strong>Profiel</strong></a></li>
+            <li style="border-right: 1px solid brown"><a href="CCCC"><strong>CCCC</strong></a></li>
+            <li style="border: 1px solid brown"><a href="DDDD"><strong>DDDD</strong></a></li>
+            </ul>
 
 
 
-    </article>
+    </nav>
 
 
 
 
 </body>
-</body>
+
 
 </html>
