--- a/profile.html
+++ b/profile.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-    <h1>Welkom op mijn profiel</h1>
+    <h1>Mijn Profiel</h1>
     <main>
-        <article>
+        <div>
             <ul>
                 <li><a href="index.html"><strong>Startpagina</strong></a></li>
             <li><a href="profile.html"><strong>Profiel</strong></a></li>
@@ -21,11 +21,13 @@
 
             </ul>
 
-        </article>
-        <article>
             
+        </div>
+        <div>
             
-        </article>
+
+
+        </div>
     </main>
 </body>
 
