--- a/index.html
+++ b/index.html
@@ -13,20 +13,25 @@
     <h1>Startpagina</h1>
     <nav>
         <ul>
-            <li style="border-right: 1px solid brown"><a href="index.html"><strong>Startpagina</strong></a></li>
+            <li style="border-right: 1px solid brown"><a href="index.html" style="border-left: 1px solid brown"><strong>Startpagina</strong></a></li>
             <li style="border: 1px solid brown"><a href="profile.html"><strong>Profiel</strong></a></li>
-            <li style="border-right: 1px solid brown"><a href="CCCC"><strong>CCCC</strong></a></li>
-            <li style="border: 1px solid brown"><a href="DDDD"><strong>DDDD</strong></a></li>
-            </ul>
-
-
-
+            <li style="border-right: 1px solid brown"><a href="faq.html"  style="border-left: 1px solid brown"><strong>CCC</strong></a></li>
+            <li style="border: 1px solid brown"><a href="faq.html"><strong>FAQ</strong></a></li>
+        </ul>
     </nav>
+    
 
 
 
 
 </body>
+<!-- Navigation -->
+<nav class="w3-bar w3-black">
+  <a href="#home" class="w3-button w3-bar-item">Home</a>
+  <a href="#band" class="w3-button w3-bar-item">Band</a>
+  <a href="#tour" class="w3-button w3-bar-item">Tour</a>
+  <a href="#contact" class="w3-button w3-bar-item">Contact</a>
+</nav>
 
 
 </html>
