--- a/profile.html
+++ b/profile.html
@@ -14,17 +14,17 @@
     <main>
         <div>
             <ul>
-                <li><a href="index.html"><strong>Startpagina</strong></a></li>
-            <li><a href="profile.html"><strong>Profiel</strong></a></li>
-            <li><a href="CCCC"><strong>CCCC</strong></a></li>
-            <li><a href="DDDD"><strong>DDDD</strong></a></li>
+                <li style="border-right: 1px solid brown"><a href="index.html" style="border-left: 1px solid brown"><strong>Startpagina</strong></a></li>
+                <li style="border: 1px solid brown"><a href="profile.html"><strong>Profiel</strong></a></li>
+                <li style="border-right: 1px solid brown"><a href="CCCC"  style="border-left: 1px solid brown"><strong>CCCC</strong></a></li>
+                <li style="border: 1px solid brown"><a href="faq.html"><strong>FAQ</strong></a></li>
 
             </ul>
 
-            
+
         </div>
         <div>
-            
+
 
 
         </div>
