navigation bar veranders, nu naast elkaar

--- a/index.html
+++ b/index.html
@@ -6,32 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Startpagina Portfolio</title>
     <link rel="stylesheet" href="styles.css">
-
+    <nav>
+        <a class="navigation-links" href="index.html"><strong>Startpagina</strong></a>
+        <a class="navigation-links" href="profile.html"><strong>Profiel</strong></a>
+        <a class="navigation-links" href="dashboard.html"><strong>Dashboard</strong></a>
+        <a class="navigation-links" href="faq.html"><strong>FAQ</strong></a>
+    </nav>
 </head>
 
 <body>
-    <h1>Startpagina</h1>
-    <nav>
-        <ul>
-            <li style="border-right: 1px solid brown"><a href="index.html" style="border-left: 1px solid brown"><strong>Startpagina</strong></a></li>
-            <li style="border: 1px solid brown"><a href="profile.html"><strong>Profiel</strong></a></li>
-            <li style="border-right: 1px solid brown"><a href="faq.html"  style="border-left: 1px solid brown"><strong>CCC</strong></a></li>
-            <li style="border: 1px solid brown"><a href="faq.html"><strong>FAQ</strong></a></li>
-        </ul>
-    </nav>
-    
+    <main>
+
+        <h1>Startpagina</h1>
+    </main>
 
 
 
 
 </body>
 <!-- Navigation -->
-<nav class="w3-bar w3-black">
-  <a href="#home" class="w3-button w3-bar-item">Home</a>
-  <a href="#band" class="w3-button w3-bar-item">Band</a>
-  <a href="#tour" class="w3-button w3-bar-item">Tour</a>
-  <a href="#contact" class="w3-button w3-bar-item">Contact</a>
-</nav>
 
 
 </html>
