--- a/profile.html
+++ b/profile.html
@@ -5,29 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My profile</title>
+    <title>Mijn profiel</title>
     <link rel="stylesheet" href="styles.css">
+    <nav>
+        <a class="navigation-links" href="index.html"><strong>Startpagina</strong></a>
+        <a class="navigation-links" href="profile.html"><strong>Profiel</strong></a>
+        <a class="navigation-links" href="dashboard.html"><strong>Dashboard</strong></a>
+        <a class="navigation-links" href="faq.html"><strong>FAQ</strong></a>
+    </nav>
 </head>
 
 <body>
-    <h1>Mijn Profiel</h1>
     <main>
-        <div>
-            <ul>
-                <li style="border-right: 1px solid brown"><a href="index.html" style="border-left: 1px solid brown"><strong>Startpagina</strong></a></li>
-                <li style="border: 1px solid brown"><a href="profile.html"><strong>Profiel</strong></a></li>
-                <li style="border-right: 1px solid brown"><a href="CCCC"  style="border-left: 1px solid brown"><strong>CCCC</strong></a></li>
-                <li style="border: 1px solid brown"><a href="faq.html"><strong>FAQ</strong></a></li>
-
-            </ul>
-
-
-        </div>
-        <div>
-
-
-
-        </div>
+        <h1>Mijn Profiel</h1>
     </main>
 </body>
 
