--- a/faq.html
+++ b/faq.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FAQ</title>
     <link rel="stylesheet" href="styles.css">
+    <nav>
+        <a class="navigation-links" href="index.html"><strong>Startpagina</strong></a>
+        <a class="navigation-links" href="profile.html"><strong>Profiel</strong></a>
+        <a class="navigation-links" href="dashboard.html"><strong>Dashboard</strong></a>
+        <a class="navigation-links" href="faq.html"><strong>FAQ</strong></a>
+    </nav>
 </head>
+
 <body>
-    <h1> 
-        Frequently Asked Questions
-    </h1>
-    
+    <h1> Frequently Asked Questions</h1>
+
+
+
 </body>
+
 </html>
