nav bar afgemaakt met logo en begonnen met profiel h2 en p

--- a/profile.html
+++ b/profile.html
@@ -4,20 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mijn profiel</title>
     <link rel="stylesheet" href="styles.css">
     <nav>
-        <a class="navigation-links" href="index.html"><strong>Startpagina</strong></a>
-        <a class="navigation-links" href="profile.html"><strong>Profiel</strong></a>
-        <a class="navigation-links" href="dashboard.html"><strong>Dashboard</strong></a>
-        <a class="navigation-links" href="faq.html"><strong>FAQ</strong></a>
+        <ul>
+            <li><a class="navigation-links" href="index.html"><strong>Startpagina</strong></a></li>
+            <li><a class="navigation-links" href="profile.html"><strong>Profiel</strong></a></li>
+            <li><a class="navigation-links" href="dashboard.html"><strong>Dashboard</strong></a></li>
+            <li><a class="navigation-links" href="faq.html"><strong>FAQ</strong></a></li>
+            <li><a class="hzlogo" href="https://hz.nl/"><img src="hz-logo.png"></img></a></li>
     </nav>
 </head>
 
 <body>
     <main>
-        <h1>Mijn Profiel</h1>
+        <h1>Achraf</h1>
+        <h2>Wie ben ik?</h2>
+        <p>Ik heet Achraf, ik ben 21 jaar en ik kom uit Vlissingen.</p>
+
+
     </main>
 </body>
 
