--- a/dashboard.html
+++ b/dashboard.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
     <link rel="stylesheet" href="styles.css">
     <nav>
-        <a class="navigation-links" href="index.html"><strong>Startpagina</strong></a>
-        <a class="navigation-links" href="profile.html"><strong>Profiel</strong></a>
-        <a class="navigation-links" href="dashboard.html"><strong>Dashboard</strong></a>
-        <a class="navigation-links" href="faq.html"><strong>FAQ</strong></a>
+        <ul>
+            <li><a class="navigation-links" href="index.html"><strong>Startpagina</strong></a></li>
+            <li><a class="navigation-links" href="profile.html"><strong>Profiel</strong></a></li>
+            <li><a class="navigation-links" href="dashboard.html"><strong>Dashboard</strong></a></li>
+            <li><a class="navigation-links" href="faq.html"><strong>FAQ</strong></a></li>
+            <li><a class="hzlogo" href="https://hz.nl/"><img src="hz-logo.png"></img></a></li>  
     </nav>
 </head>
+
 <body>
-    <h1>Dashboard</h1>
-    
+    <main>
+        <h1>Dashboard</h1>
+    </main>
+
 </body>
+
 </html>
