--- a/index.html
+++ b/index.html
@@ -7,24 +7,22 @@
     <title>Startpagina Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <nav>
-        <a class="navigation-links" href="index.html"><strong>Startpagina</strong></a>
-        <a class="navigation-links" href="profile.html"><strong>Profiel</strong></a>
-        <a class="navigation-links" href="dashboard.html"><strong>Dashboard</strong></a>
-        <a class="navigation-links" href="faq.html"><strong>FAQ</strong></a>
+        <ul>
+            <li><a class="navigation-links" href="index.html"><strong>Startpagina</strong></a></li>
+            <li><a class="navigation-links" href="profile.html"><strong>Profiel</strong></a></li>
+            <li><a class="navigation-links" href="dashboard.html"><strong>Dashboard</strong></a></li>
+            <li><a class="navigation-links" href="faq.html"><strong>FAQ</strong></a></li>
+            <li><a class="hzlogo" href="https://hz.nl/"><img src="hz-logo.png"></img></a></li>
+        </ul>
     </nav>
 </head>
 
 <body>
     <main>
-
         <h1>Startpagina</h1>
+
     </main>
 
-
-
-
 </body>
-<!-- Navigation -->
-
 
 </html>
