--- a/dashboard.html
+++ b/dashboard.html
@@ -7,12 +7,12 @@
     <title>Dashboard</title>
     <link rel="stylesheet" href="styles.css">
     <nav>
-        <ul>
+        <ul class="navigation-bar">
             <li><a class="navigation-links" href="index.html"><strong>Startpagina</strong></a></li>
             <li><a class="navigation-links" href="profile.html"><strong>Profiel</strong></a></li>
-            <li><a class="navigation-links" href="dashboard.html"><strong>Dashboard</strong></a></li>
+            <li><a class="navigation-links" href="dashboard.html" id="dashboard"><strong>Dashboard</strong></a></li>
             <li><a class="navigation-links" href="faq.html"><strong>FAQ</strong></a></li>
-            <li><a class="hzlogo" href="https://hz.nl/"><img src="hz-logo.png"></img></a></li>  
+            <li><a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="hz-logo.png"></img></a></li>  
     </nav>
 </head>
 
