--- a/profile.html
+++ b/profile.html
@@ -7,21 +7,28 @@
     <title>Mijn profiel</title>
     <link rel="stylesheet" href="styles.css">
     <nav>
-        <ul>
+        <ul class="navigation-bar">
             <li><a class="navigation-links" href="index.html"><strong>Startpagina</strong></a></li>
-            <li><a class="navigation-links" href="profile.html"><strong>Profiel</strong></a></li>
+            <li><a class="navigation-links" id="profiel" href="profile.html"><strong>Profiel</strong></a></li>
             <li><a class="navigation-links" href="dashboard.html"><strong>Dashboard</strong></a></li>
             <li><a class="navigation-links" href="faq.html"><strong>FAQ</strong></a></li>
-            <li><a class="hzlogo" href="https://hz.nl/"><img src="hz-logo.png"></img></a></li>
+            <li><a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="hz-logo.png"></img></a></li>
     </nav>
 </head>
 
 <body>
     <main>
         <h1>Achraf</h1>
-        <h2>Wie ben ik?</h2>
-        <p>Ik heet Achraf, ik ben 21 jaar en ik kom uit Vlissingen.</p>
+        <article>
+            <h2>Wie ben ik?</h2>
+            <p>Ik heet Achraf, ik ben 21 jaar en ik kom uit Vlissingen. Mijn hobbies zijn voornamelijk:</p>
+            <ul>
+                <li class="hobbies">Voetbal/Basketbal</li>
+                <li class="hobbies">Voetbal en F1 kijken</li>
 
+
+            </ul>
+        </article>
 
     </main>
 </body>
