--- a/dashboard.html
+++ b/dashboard.html
@@ -12,13 +12,25 @@
             <li><a class="navigation-links" href="profile.html"><strong>Profiel</strong></a></li>
             <li><a class="navigation-links" href="dashboard.html" id="dashboard"><strong>Dashboard</strong></a></li>
             <li><a class="navigation-links" href="faq.html"><strong>FAQ</strong></a></li>
-            <li><a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="hz-logo.png"></img></a></li>  
+            <li><a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="hz-logo.png"></img></a></li>
     </nav>
 </head>
 
 <body>
     <main>
         <h1>Dashboard</h1>
+        <table>
+            <tr>
+                <th>Quarter</th>
+                <th>Course</th>
+                <th>Exams</th>
+                <th>Grades</th>
+                <th>EC</th>
+            </tr>
+        </table>
+
+
+
     </main>
 
 </body>
