blog toegevoegd en css nav bar aangepast

--- a/dashboard.html
+++ b/dashboard.html
@@ -27,6 +27,21 @@
                 <th>Grades</th>
                 <th>EC</th>
             </tr>
+            <tr>
+                <td rowspan="2">Blok 1</td>
+                <td>Computer Science Basics
+            </tr>
+            <tr>
+                <td>Blok 2</td>
+            </tr>
+            <tr>
+                <td>Blok 3</td>
+            </tr>
+            <tr>
+                <td>Blok 4</td>
+            </tr>
+            
+
         </table>
 
 
