--- a/faq.html
+++ b/faq.html
@@ -11,6 +11,7 @@
             <li><a class="navigation-links" href="index.html"><strong>Startpagina</strong></a></li>
             <li><a class="navigation-links" href="profile.html"><strong>Profiel</strong></a></li>
             <li><a class="navigation-links" href="dashboard.html"><strong>Dashboard</strong></a></li>
+            <li><a class="navigation-links" href="blog.html"><strong>Blog</strong></a></li>
             <li><a class="navigation-links" href="faq.html" id="faq"><strong>FAQ</strong></a></li>
             <li><a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="hz-logo.png"></img></a></li>
     </nav>
