--- a/blog.html
+++ b/blog.html
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog</title>
     <link rel="stylesheet" href="styles.css">
     <nav>
-        <ul class="navigation-bar">
-            <li><a class="navigation-links" id="startpagina" href="index.html"><strong>Startpagina</strong></a></li>
-            <li><a class="navigation-links" href="profile.html"><strong>Profiel</strong></a></li>
-            <li><a class="navigation-links" href="dashboard.html"><strong>Dashboard</strong></a></li>
-            <li><a class="navigation-links" href="blog.html"><strong>Blog</strong></a></li>
-            <li><a class="navigation-links" href="faq.html"><strong>FAQ</strong></a></li>
-            <li><a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="hz-logo.png"></img></a></li>
-        </ul>
+        <div class="nav-content">
+            <ul class="navigation-bar">
+                <li><a class="navigation-links"  href="index.html"><strong>Startpagina</strong></a></li>
+                <li><a class="navigation-links" href="profile.html"><strong>Profiel</strong></a></li>
+                <li><a class="navigation-links" href="dashboard.html"><strong>Dashboard</strong></a></li>
+                <li><a class="navigation-links" id="blog" href="blog.html"><strong>Blog</strong></a></li>
+                <li><a class="navigation-links" href="faq.html"><strong>FAQ</strong></a></li>
+            </ul>
+            <div class="hzlogo">
+                <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="hz-logo.png"></img></a></li>
+            </div>
+        </div>  
     </nav>
 </head>
+
 <body>
     <h1>Welkom op mijn blog</h1>
-    
+
 </body>
+
 </html>
