--- a/index.html
+++ b/index.html
@@ -7,14 +7,21 @@
     <title>Startpagina Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <nav>
-        <ul class="navigation-bar">
-            <li><a class="navigation-links" id="startpagina" href="index.html"><strong>Startpagina</strong></a></li>
-            <li><a class="navigation-links" href="profile.html"><strong>Profiel</strong></a></li>
-            <li><a class="navigation-links" href="dashboard.html"><strong>Dashboard</strong></a></li>
-            <li><a class="navigation-links" href="blog.html"><strong>Blog</strong></a></li>
-            <li><a class="navigation-links" href="faq.html"><strong>FAQ</strong></a></li>
-            <li><a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="hz-logo.png"></img></a></li>
-        </ul>
+        <div class="nav-content">
+            <ul class="navigation-bar">
+                <li><a class="navigation-links" id="startpagina" href="index.html"><strong>Startpagina</strong></a></li>
+                <li><a class="navigation-links" href="profile.html"><strong>Profiel</strong></a></li>
+                <li><a class="navigation-links" href="dashboard.html"><strong>Dashboard</strong></a></li>
+                <li><a class="navigation-links" href="blog.html"><strong>Blog</strong></a></li>
+                <li><a class="navigation-links" href="faq.html"><strong>FAQ</strong></a></li>
+            </ul>
+            <div class="hzlogo">
+                <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="hz-logo.png"></img></a></li>
+            </div>
+        </div>  
+
+
+
     </nav>
 </head>
 
