--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
     <main>
         <header>
-            <h1>Startpagina</h1>
+            <h1>Startpagina</h1>    
         
         
         </header>
@@ -38,5 +38,10 @@
     </main>
 
 </body>
+
+<footer>
+    <p>Dit is de footer</p>
+ 
+</footer>
 
 </html>
