--- a/profile.html
+++ b/profile.html
@@ -27,7 +27,7 @@
         <h1>Achraf</h1>
         <article>
             <h2>Wie ben ik?</h2>
-            <p>Ik heet Achraf, ik ben 21 jaar en ik kom uit Vlissingen. Mijn hobbies zijn voornamelijk:</p>
+            <p>Ik heet Achraf,</p>
             <ul>
                 <li class="hobbies">Voetbal/Basketbal</li>
                 <li class="hobbies">Voetbal en F1 kijken</li>
