--- a/dashboard.html
+++ b/dashboard.html
@@ -18,7 +18,7 @@
             <div class="hzlogo">
                 <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="hz-logo.png"></img></a></li>
             </div>
-        </div>  
+        </div>
     </nav>
 </head>
 
@@ -29,27 +29,30 @@
             <tr>
                 <th>Quarter</th>
                 <th>Course</th>
-                <th>Exams</th>
-                <th>Grades</th>
-                <th>EC</th>
+                <th>Examens</th>
+                <th>Behaalbare Studiepunten</th>
+                <th>Behaalde Studiepunten</th>
             </tr>
             <tr>
-                <td rowspan="2">Blok 1</td>
-                <td>Computer Science Basics
+                <td rowspan="6">Blok 1</td>
+                <td>Program- & Career Orientation</td>
+                <td>Portfolio website presentation</td>
+                <td>2.5 EC</td>
+                <td>n.t.b.</td>
             </tr>
             <tr>
-                <td>Blok 2</td>
+                <td>Computer Sience Basics</td>
             </tr>
             <tr>
-                <td>Blok 3</td>
+                <td>Programming Basics</td>
             </tr>
             <tr>
-                <td>Blok 4</td>
+                <td>...</td>
             </tr>
 
 
         </table>
-
+    <style></style>    
 
 
     </main>
