footer toegevoegd nog geen IR

--- a/dashboard.html
+++ b/dashboard.html
@@ -58,5 +58,16 @@
     </main>
 
 </body>
-
+<footer>
+    <div class="footer-container">
+        <ul class="footer-ul">
+            <li class="footer-text"><a class="footer-links" target="_blank" href="https://hz.nl/uploads/documents/1.4-Over-de-HZ/1.4.3.-Regelingen-en-documenten/OERS/2023-2024/Juli/CER-HZ-Bachelor-full-time-2023-2024-DEF-version-20240412.pdf">Course and Examination Regulations</a></li>
+            <li class="footer-text"><a class="footer-links" target="_blank" href=""></a>Implementation Regulations HBO-ICT</li>
+            <li class="footer-text"><a class="footer-links" target="_blank" href="https://learn.hz.nl/"> HZ Learn</a></li>
+            <li class="footer-text"><a class="footer-links" target="_blank" href="https://hz.osiris-student.nl/voortgang">Studievoortgang</a></li>
+            <li class="footer-text"><a class="footer-links" target="_blank" href="https://github.com/HZ-HBO-ICT">HZ Github</a></lo>
+           
+        </ul>
+    </div>
+</footer>
 </html>
