--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Startpagina Portfolio</title>
+    <title>Startpagina Portfolio voor het HZ HBO-ICT programma</title>
     <link rel="stylesheet" href="styles.css">
 
     <nav>
