--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 
 <head>
+    <title>Startpagina Portfolio voor het HZ HBO-ICT programma</title>
+    <meta name="description" content="Mijn portfolio bevat mijn motivatie en Studievoortgang voor het studeren van HBO-ICT op de HZ.">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Startpagina Portfolio voor het HZ HBO-ICT programma</title>
     <link rel="stylesheet" href="styles.css">
 
     <nav>
@@ -17,7 +18,7 @@
                 <li><a class="navigation-links" href="faq.html"><strong>FAQ</strong></a></li>
             </ul>
             <div class="hzlogo">
-                <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="hz-logo.png"></img></a></li>
+                <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="hz-logo.png" alt="hz-logo"></img></a></li>
             </div>
         </div>
 
