--- a/dashboard.html
+++ b/dashboard.html
@@ -16,7 +16,8 @@
                 <li><a class="navigation-links" href="faq.html"><strong>FAQ</strong></a></li>
             </ul>
             <div class="hzlogo">
-                <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="hz-logo.png" alt="hz-logo"></img></a></li>
+                <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="hz-logo.png" alt="hz-logo"></img></a>
+                </li>
             </div>
         </div>
     </nav>
@@ -52,7 +53,7 @@
 
 
         </table>
-    <style></style>    
+        <style></style>
 
 
     </main>
@@ -66,8 +67,8 @@
             <li class="footer-text"><a class="footer-links" target="_blank" href="https://learn.hz.nl/"> HZ Learn</a></li>
             <li class="footer-text"><a class="footer-links" target="_blank" href="https://hz.osiris-student.nl/voortgang">Studievoortgang</a></li>
             <li class="footer-text"><a class="footer-links" target="_blank" href="https://github.com/HZ-HBO-ICT">HZ Github</a></lo>
-           
         </ul>
     </div>
 </footer>
+
 </html>
