--- a/profile.html
+++ b/profile.html
@@ -16,9 +16,10 @@
                 <li><a class="navigation-links" href="faq.html"><strong>FAQ</strong></a></li>
             </ul>
             <div class="hzlogo">
-                <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="hz-logo.png" alt="hz-logo"></img></a></li>
+                <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="hz-logo.png" alt="hz-logo"></img></a>
+                </li>
             </div>
-        </div>  
+        </div>
     </nav>
 </head>
 
@@ -46,7 +47,6 @@
             <li class="footer-text"><a class="footer-links" target="_blank" href="https://learn.hz.nl/"> HZ Learn</a></li>
             <li class="footer-text"><a class="footer-links" target="_blank" href="https://hz.osiris-student.nl/voortgang">Studievoortgang</a></li>
             <li class="footer-text"><a class="footer-links" target="_blank" href="https://github.com/HZ-HBO-ICT">HZ Github</a></lo>
-           
         </ul>
     </div>
 </footer>
