Profiel font size veranderd en tekst aangepast  work in progress

--- a/profile.html
+++ b/profile.html
@@ -27,8 +27,8 @@
     <main>
         <h1>Achraf</h1>
         <article>
-            <h2>Wie ben ik?</h2>
-            <p>Ik heet Achraf,</p>
+            <h3>Over mezelf</h3>
+            <p>aaa</p>
             <ul>
                 <li class="hobbies">Voetbal/Basketbal</li>
                 <li class="hobbies">Voetbal en F1 kijken</li>
