bezig met faq in het midden gekregen met flex column gebruikt

--- a/faq.html
+++ b/faq.html
@@ -26,19 +26,47 @@
 <body>
     <main>
         <h1>Frequently Asked Questions</h1>
+        <div class="faq-container">
+            <details>
+                <summary>How can you print a document from your laptop at HZ?</summary>    
+                <p>aaa</p>
+            </details>
+            <details>
+                <summary>How can you scan a document and send it to your laptop at HZ?</summary>
+                <p>bbbb</p>
+            </details>
+            <details>
+                <summary>How can I buy something on the HZ web shop?</summary>
+                <p>ccc</p>
+            </details>
+            <details>
+                <summary>How can you book a project space?</summary>
+                <p>ddd</p>
+            </details>
+            <details>
+                <summary>What are the instructions if you want to park your car at the HZ parking lot?</summary>
+                <p>eee</p>
+            </details>
+        </div>
     </main>
-
-
 </body>
 <footer>
     <div class="footer-container">
         <ul class="footer-ul">
-            <li class="footer-text"><a class="footer-links" target="_blank" href="https://hz.nl/uploads/documents/1.4-Over-de-HZ/1.4.3.-Regelingen-en-documenten/OERS/2023-2024/Juli/CER-HZ-Bachelor-full-time-2023-2024-DEF-version-20240412.pdf">Course and Examination Regulations</a></li>
-            <li class="footer-text"><a class="footer-links" target="_blank" href="all courses.pdf">Implementation Regulations HBO-ICT</a></li>
-            <li class="footer-text"><a class="footer-links" target="_blank" href="https://learn.hz.nl/"> HZ Learn</a></li>
-            <li class="footer-text"><a class="footer-links" target="_blank" href="https://hz.osiris-student.nl/voortgang">Studievoortgang</a></li>
-            <li class="footer-text"><a class="footer-links" target="_blank" href="https://github.com/HZ-HBO-ICT">HZ Github</a></lo>           
+            <li class="footer-text"><a class="footer-links" target="_blank"
+                    href="https://hz.nl/uploads/documents/1.4-Over-de-HZ/1.4.3.-Regelingen-en-documenten/OERS/2023-2024/Juli/CER-HZ-Bachelor-full-time-2023-2024-DEF-version-20240412.pdf">Course
+                    and Examination Regulations</a></li>
+            <li class="footer-text"><a class="footer-links" target="_blank" 
+                href="all courses.pdf">Implementation
+                    Regulations HBO-ICT</a></li>
+            <li class="footer-text"><a class="footer-links" target="_blank" href="https://learn.hz.nl/"> HZ Learn</a>
+            </li>
+            <li class="footer-text"><a class="footer-links" target="_blank"
+                    href="https://hz.osiris-student.nl/voortgang">Studievoortgang</a></li>
+            <li class="footer-text"><a class="footer-links" target="_blank" href="https://github.com/HZ-HBO-ICT">HZ
+                    Github</a></lo>
         </ul>
     </div>
 </footer>
+
 </html>
