aan faq gewerkt

--- a/faq.html
+++ b/faq.html
@@ -28,24 +28,24 @@
         <h1>Frequently Asked Questions</h1>
         <div class="faq-container">
             <details>
-                <summary>How can you print a document from your laptop at HZ?</summary>    
-                <p>aaa</p>
+                <summary class="faq-questions">Hoe kun je op de HZ een document printen vanaf je laptop?</summary>    
+                <p>Ga naar<a href="https://hz.mynetpay.nl/" target="_blank"> hz.mynetpay.nl</a> en vul je inloggegevens in.</p>
             </details>
             <details>
-                <summary>How can you scan a document and send it to your laptop at HZ?</summary>
+                <summary class="faq-questions">Hoe kun je bij de HZ een document scannen en naar je laptop sturen?</summary>
                 <p>bbbb</p>
             </details>
             <details>
-                <summary>How can I buy something on the HZ web shop?</summary>
-                <p>ccc</p>
+                <summary class="faq-questions">Hoe kan ik iets kopen in de HZ webshop?</summary>
+                <p>Ga naar<a href="https://webshop.hz.nl/" target="_blank"> webshop.hz.nl</a>. Klik op inloggen en vul je gegevens in. Kies iets uit en voeg het toe aan je winkelwagen. Hierna kun je afrekenen en je product op de HZ ophalen.  </p>
             </details>
             <details>
-                <summary>How can you book a project space?</summary>
-                <p>ddd</p>
+                <summary class="faq-questions">Hoe kun je een projectruimte reserveren?</summary>
+                <p>Ga naar <a href="https://hzuniversity.topdesk.net/" target="_blank">hzuniversity.topdesk.net</a>. Log in en klik op "Reservations", klik hierna op "Reserve a meeting or project room" en daarna op "Reserve a room".</p>
             </details>
             <details>
-                <summary>What are the instructions if you want to park your car at the HZ parking lot?</summary>
-                <p>eee</p>
+                <summary class="faq-questions">Wat zijn de instructies als je je auto op het parkeerterrein van de HZ wilt parkeren?</summary>
+                <p>Sinds dit jaar zijn er voor HZ'ers plekken beschikbaar in de parkeergarage aan de Kousteensedijk in Middelburg.</p>
             </details>
         </div>
     </main>
