--- a/faq.html
+++ b/faq.html
@@ -41,7 +41,7 @@
             </details>
             <details>
                 <summary class="faq-questions">Hoe kun je een projectruimte reserveren?</summary>
-                <p>Ga naar <a href="https://hzuniversity.topdesk.net/" target="_blank">hzuniversity.topdesk.net</a>. Log in en klik op "Reservations", klik hierna op "Reserve a meeting or project room" en daarna op "Reserve a room".</p>
+                <p>Ga naar <a href="https://hzuniversity.topdesk.net/" target="_blank">hzuniversity.topdesk.net</a>. Log in en klik op "Reservations", klik hierna op "Reserve a meeting or project room" en daarna op "Reserve a room". Kies een ruimte en tijd uit en vul je gegevens in. Klik als laatst op "Confirm"</p>
             </details>
             <details>
                 <summary class="faq-questions">Wat zijn de instructies als je je auto op het parkeerterrein van de HZ wilt parkeren?</summary>
