faq afgemaakt blog begonnen

--- a/blog.html
+++ b/blog.html
@@ -24,7 +24,22 @@
 
 <body>
     <h1>Welkom op mijn blog</h1>
+    <div class="grid-container">
+        <div class="grid-item"><p class='text'>Waarom ICT? Vanaf jongs af aan heb ik altijd een sterke interesse gehad in computers en technologie.</p>
+        <a class="readmore" href="opgroeiing.html">Read more</a></div>
+        <div class="grid-item"><p class='text'>Lorem ipsum odor amet, consectetuer adipiscing elit. Volutpat egestas varius augue auctor nec feugiat imperdiet. Urna tortor ultricies vestibulum blandit; aenean aenean. Est a massa magna nisi parturient varius imperdiet nisi. In etiam tellus fringilla sed quam. Justo suspendisse viverra morbi vestibulum amet; varius posuere hendrerit.</p>
+        <a class="readmore" href="opgroeiing.html">Read more</a></div>
+        <div class="grid-item"><p class='text'>Lorem ipsum odor amet, consectetuer adipiscing elit. Volutpat egestas varius augue auctor nec feugiat imperdiet. Urna tortor ultricies vestibulum blandit; aenean aenean. Est a massa magna nisi parturient varius imperdiet nisi. In etiam tellus fringilla sed quam. Justo suspendisse viverra morbi vestibulum amet; varius posuere hendrerit.</p>
+        <a class="readmore" href="opgroeiing.html">Read more</a></div>
+        <div class="grid-item"><p class='text'>Lorem ipsum odor amet, consectetuer adipiscing elit. Volutpat egestas varius augue auctor nec feugiat imperdiet. Urna tortor ultricies vestibulum blandit; aenean aenean. Est a massa magna nisi parturient varius imperdiet nisi. In etiam tellus fringilla sed quam. Justo suspendisse viverra morbi vestibulum amet; varius posuere hendrerit.</p>
+        <a class="readmore" href="opgroeiing.html">Read more</a></div>
+        <div class="grid-item"><p class='text'>Lorem ipsum odor amet, consectetuer adipiscing elit. Volutpat egestas varius augue auctor nec feugiat imperdiet. Urna tortor ultricies vestibulum blandit; aenean aenean. Est a massa magna nisi parturient varius imperdiet nisi. In etiam tellus fringilla sed quam. Justo suspendisse viverra morbi vestibulum amet; varius posuere hendrerit.</p>
+<a class="readmore" href="opgroeiing.html">Read more</a></div>
+       
 
+
+
+    </div>
 
 </body>
 <footer>
