--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Startpagina Portfolio voor het HZ HBO-ICT programma</title>
+    <title>Pagina over hoe ik ben opgegroeid</title>
     <meta name="description"
         content="Mijn portfolio bevat mijn motivatie en Studievoortgang voor het studeren van HBO-ICT op de HZ.">
     <meta charset="UTF-8">
