--- a/opgroeiing.html
+++ b/opgroeiing.html
@@ -2,15 +2,18 @@
 <html lang="en">
 
 <head>
+    <title>Pagina over hoe ik ben opgegroeid met technologie</title>
+    <meta name="description"
+        content="Mijn portfolio bevat mijn motivatie en Studievoortgang voor het studeren van HBO-ICT op de HZ.">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mijn profiel</title>
     <link rel="stylesheet" href="styles.css">
+
     <nav>
         <div class="nav-content">
             <ul class="navigation-bar">
                 <li><a class="navigation-links" href="index.html"><strong>Startpagina</strong></a></li>
-                <li><a class="navigation-links" id="profiel" href="profile.html"><strong>Profiel</strong></a></li>
+                <li><a class="navigation-links" href="profile.html"><strong>Profiel</strong></a></li>
                 <li><a class="navigation-links" href="dashboard.html"><strong>Dashboard</strong></a></li>
                 <li><a class="navigation-links" href="blog.html"><strong>Blog</strong></a></li>
                 <li><a class="navigation-links" href="faq.html"><strong>FAQ</strong></a></li>
@@ -21,26 +24,25 @@
             </div>
         </div>
     </nav>
-</head>
-
 <body>
     <main>
-        <h1>Achraf</h1>
-        <article>
-            <h3>Over mezelf</h3>
-            <p>aaa</p>
-            <ul>
-                <li class="hobbies">Voetbal/Basketbal</li>
-                <li class="hobbies">Voetbal en F1 kijken</li>
-                
-
-
-            </ul>
-            <img src="fotokat.jpg>">
-        </article>
-
+        <h1>Opgroeien met technologie</h1>
     </main>
+    <p class="blog-text">Waarom ICT? Vanaf jongs af aan heb ik altijd een sterke interesse gehad in computers en technologie. Ik herinner me dat ik als kind al uren doorbracht met het spelen van spelletjes op de computer en verschillende gameconsoles. Maar het bleef niet alleen bij het spelen van games; al snel werd ik nieuwsgierig naar hoe deze machines en software eigenlijk werkten. Ik wilde begrijpen hoe alles in elkaar zat: van het opstarten van de computer tot de manier waarop programma's en spellen verschijnen op het scherm. Die nieuwsgierigheid groeide uit tot een passie voor technologie, die me ertoe dreef om steeds meer te leren over de werking van computers en softwareontwikkeling. Om deze reden heb ik er voor gekozen om ICT te studeren op de HZ. </p>
+    <div class="blog-foto-container">
+        <img class="blog-foto" src="Technologie foto1.avif">
+        <img class="blog-foto" src="technologie foto2.avif">
+    </div>
+
+
+
+
+
+
 </body>
+
+
+
 <footer>
     <div class="footer-container">
         <ul class="footer-ul">
