aan blog gewerkt

--- a/blog.html
+++ b/blog.html
@@ -27,13 +27,13 @@
     <div class="grid-container">
         <div class="grid-item"><p class='text'>Waarom ICT? Vanaf jongs af aan heb ik altijd een sterke interesse gehad in computers en technologie.</p>
         <a class="readmore" href="opgroeiing.html">Read more</a></div>
-        <div class="grid-item"><p class='text'>Lorem ipsum odor amet, consectetuer adipiscing elit. Volutpat egestas varius augue auctor nec feugiat imperdiet. Urna tortor ultricies vestibulum blandit; aenean aenean. Est a massa magna nisi parturient varius imperdiet nisi. In etiam tellus fringilla sed quam. Justo suspendisse viverra morbi vestibulum amet; varius posuere hendrerit.</p>
+        <div class="grid-item"><p class='text'>Personal SWOT analysis - taken from your SKC document</p>
         <a class="readmore" href="opgroeiing.html">Read more</a></div>
-        <div class="grid-item"><p class='text'>Lorem ipsum odor amet, consectetuer adipiscing elit. Volutpat egestas varius augue auctor nec feugiat imperdiet. Urna tortor ultricies vestibulum blandit; aenean aenean. Est a massa magna nisi parturient varius imperdiet nisi. In etiam tellus fringilla sed quam. Justo suspendisse viverra morbi vestibulum amet; varius posuere hendrerit.</p>
+        <div class="grid-item"><p class='text'>Programming experience - taken from the SKC questionnaire</p>
         <a class="readmore" href="opgroeiing.html">Read more</a></div>
-        <div class="grid-item"><p class='text'>Lorem ipsum odor amet, consectetuer adipiscing elit. Volutpat egestas varius augue auctor nec feugiat imperdiet. Urna tortor ultricies vestibulum blandit; aenean aenean. Est a massa magna nisi parturient varius imperdiet nisi. In etiam tellus fringilla sed quam. Justo suspendisse viverra morbi vestibulum amet; varius posuere hendrerit.</p>
+        <div class="grid-item"><p class='text'>First feedback - The feedback you had from the SKC assignment and what your thoughts were about that feedback.</p>
         <a class="readmore" href="opgroeiing.html">Read more</a></div>
-        <div class="grid-item"><p class='text'>Lorem ipsum odor amet, consectetuer adipiscing elit. Volutpat egestas varius augue auctor nec feugiat imperdiet. Urna tortor ultricies vestibulum blandit; aenean aenean. Est a massa magna nisi parturient varius imperdiet nisi. In etiam tellus fringilla sed quam. Justo suspendisse viverra morbi vestibulum amet; varius posuere hendrerit.</p>
+        <div class="grid-item"><p class='text'>At least one article about the ICT field of work.</p>
 <a class="readmore" href="opgroeiing.html">Read more</a></div>
        
 
