--- a/opgroeiing.html
+++ b/opgroeiing.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
 
+
     <nav>
         <div class="nav-content">
             <ul class="navigation-bar">
@@ -24,11 +25,12 @@
             </div>
         </div>
     </nav>
+</head>
 <body>
     <main>
         <h1>Opgroeien met technologie</h1>
     </main>
-    <p class="blog-text">Waarom ICT? Vanaf jongs af aan heb ik altijd een sterke interesse gehad in computers en technologie. Ik herinner me dat ik als kind al uren doorbracht met het spelen van spelletjes op de computer en verschillende gameconsoles. Maar het bleef niet alleen bij het spelen van games; al snel werd ik nieuwsgierig naar hoe deze machines en software eigenlijk werkten. Ik wilde begrijpen hoe alles in elkaar zat: van het opstarten van de computer tot de manier waarop programma's en spellen verschijnen op het scherm. Die nieuwsgierigheid groeide uit tot een passie voor technologie, die me ertoe dreef om steeds meer te leren over de werking van computers en softwareontwikkeling. Om deze reden heb ik er voor gekozen om ICT te studeren op de HZ. </p>
+    <p class="blog-text">Waarom ICT?Vanaf jongs af aan heb ik altijd een sterke interesse gehad in computers en technologie. Ik herinner me dat ik als kind al uren doorbracht met het spelen van spelletjes op de computer en verschillende gameconsoles. Maar het bleef niet alleen bij het spelen van games; al snel werd ik nieuwsgierig naar hoe deze machines en software eigenlijk werkten. Ik wilde begrijpen hoe alles in elkaar zat: van het opstarten van de computer tot de manier waarop programma's en spellen verschijnen op het scherm. Die nieuwsgierigheid groeide uit tot een passie voor technologie, die me ertoe dreef om steeds meer te leren over de werking van computers en softwareontwikkeling. Om deze reden heb ik er voor gekozen om ICT te studeren op de HZ. </p>
     <div class="blog-foto-container">
         <img class="blog-foto" src="Technologie foto1.avif">
         <img class="blog-foto" src="technologie foto2.avif">
