--- a/profile.html
+++ b/profile.html
@@ -36,7 +36,7 @@
 
 
             </ul>
-            <img src="fotokat.jpg>">
+            <div><img src="fotokat.jpg>" alt="foto van mijn kat"></div>
         </article>
 
     </main>
