--- a/faq.html
+++ b/faq.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frequently Asked Question about HZ Univeristy</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="vuurwerk.svg">
+    
     <nav>
         <div class="nav-content">
             <ul class="navigation-bar">
