--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 
 <head>
-    <title>Pagina over hoe ik ben opgegroeid</title>
+    <title>Startpagina</title>
     <meta name="description"
         content="Mijn portfolio bevat mijn motivatie en Studievoortgang voor het studeren van HBO-ICT op de HZ.">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="vuurwerk.svg">
 
     <nav>
         <div class="nav-content">
@@ -33,9 +34,10 @@
     <main>
         <header>
             <h1>Startpagina</h1>
+            <!--<section class="midden-stuk">
+                <h2>Welkom op mijn website</h2>
+            </section>-->
         </header>
-
-
     </main>
 
 </body>
