--- a/opgroeiing.html
+++ b/opgroeiing.html
@@ -8,6 +8,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="vuurwerk.svg">
 
 
     <nav>
