--- a/profile.html
+++ b/profile.html
@@ -37,8 +37,10 @@
                 <li class="hobbies">Voetbal en F1 kijken</li>
         </article>
          
-        <div class="blog-foto-container"><img class="blog-foto" src="fotokat.jpg"></div>
-        <div class="blog-foto-container"><img class="blog-foto" src="fotokat.jpg"></div>
+        <div class="blog-foto-container">
+            <img class="blog-foto" src="fotokat.jpg">
+            <img class="blog-foto" src="fotokat2.jpg">
+        </div>
 
 
             </ul>
